# Hydra

./: .gitignore  README.md
scheduler/: Cargo.toml
scheduler/certs/: gen.sh  san.cnf
scheduler/src/: adaptive_chunking.rs  adaptive_tiling.rs  grid_aware.rs  main.rs  token_incentives.rs
webapp/: app.py
webapp/static/: heartbeatWorker.js
webapp/templates/: index.html  mandelbrot.html  pi.html
worker/: Cargo.toml  Dockerfile
worker/src/: confidential.rs  main.rs
