[package]
name = "hydra-scheduler"
version = "0.2.0"
authors = ["Connor <conjfrnk@gmail.com>"]
edition = "2024"

[dependencies]
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
hyper = "0.14"
axum = "0.6"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"
anyhow = "1.0"
uuid = "1.3"
rand = "0.8"
