# Hydra - Cargo.toml for Scheduler
# Copyright (C) 2025 Connor Frank
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "hydra-scheduler"
version = "0.2.0"
authors = ["Connor <conjfrnk@gmail.com>"]
edition = "2024"

[dependencies]
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
hyper = "0.14"
axum = "0.6"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"
anyhow = "1.0"
uuid = "1.3"
rand = "0.8"
