[package]
name = "hydra-worker"
version = "0.3.0"
authors = ["Connor <conjfrnk@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", default-features = true, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.8"
uuid = { version = "1.3", features = ["v4"] }
