# Hydra - Cargo.toml for Worker
# Copyright (C) 2025 Connor Frank
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "hydra-worker"
version = "0.3.0"
authors = ["Connor <conjfrnk@gmail.com>"]
edition = "2024"

[dependencies]
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = true, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rand = "0.9"
uuid = { version = "1.3", features = ["v4"] }

# Additional security and performance dependencies
ring = "0.17"
aes-gcm = "0.10"
# chacha20poly1305 = "0.11"
generic-array = "0.14"
